load("//build/bazel_mgk_rules:mgk_ddk_ko.bzl", "define_mgk_ddk_ko")
load("//build/kernel/kleaf:kernel.bzl", "ddk_headers")
load("@mgk_info//:kernel_version.bzl", "kernel_version",)

package(
    default_visibility = [
        "//visibility:public",
    ],
)


filegroup(
    name = "ddk_kconfigs",
    srcs = glob([
        "**/Kconfig",
    ]),
)

filegroup(
    name = "srcs",
    srcs = glob([
          "**/Makefile",
          "**/Kbuild",
          "**/*.c",
          "**/*.h",
    ]),
)

ddk_headers(
    name = "ddk_public_headers",
    includes = [
        ".",
    ],
    hdrs = [
        "sec_accdet_sysfs_cb.h",
    ],
)

define_mgk_ddk_ko(
    name = "snd-soc-sec-audio",
    srcs = [
        "sec_audio_sysfs.c",
		"sec_accdet_sysfs_cb.c",
    ],
    hdrs = glob(["**/*.h"]),
    includes = ["."],
)